fix(desktop): remove Gstreamer architecture, use VLCJ (new)
Signed-off-by: maxrave-dev <ndtminh2608@gmail.com>